Atualizando código com média funcionando

--- a/NatanMarques/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.csproj
+++ b/NatanMarques/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{450F11DC-B4A3-477C-A085-6202917BFC16}</ProjectGuid>
+    <ProjectGuid>{961ABB9E-1C68-4CA8-8794-359C536B6B7C}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ConsoleApplication1</RootNamespace>
@@ -41,9 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\..\..\..\LP2\LP2-EN2\NatanMarques\Program.cs">
-      <Link>Program.cs</Link>
-    </Compile>
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
