--- a/GabrielaBarbosa/aula1/Aula1.csproj
+++ b/GabrielaBarbosa/aula1/Aula1.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IBGE.cs" />
+    <Compile Include="IBGE2.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
