--- a/GabrielaBarbosa/Forca/Forca/Forca.csproj
+++ b/GabrielaBarbosa/Forca/Forca/Forca.csproj
@@ -56,6 +56,20 @@
     <Compile Include="Form2.Designer.cs">
       <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
+    <Compile Include="parabens.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="parabens.Designer.cs">
+      <DependentUpon>parabens.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\..\..\..\..\Visual Studio 2013\Projects\poxa.cs">
+      <SubType>Form</SubType>
+      <Link>poxa.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\..\..\Visual Studio 2013\Projects\poxa.Designer.cs">
+      <DependentUpon>poxa.cs</DependentUpon>
+      <Link>poxa.Designer.cs</Link>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -63,6 +77,13 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form2.resx">
       <DependentUpon>Form2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="parabens.resx">
+      <DependentUpon>parabens.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="..\..\..\..\..\Visual Studio 2013\Projects\poxa.resx">
+      <DependentUpon>poxa.cs</DependentUpon>
+      <Link>poxa.resx</Link>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
